--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 streamlit==1.38.0
-PyMuPDF==1.24.9         # for PDF text extraction
-pdfminer.six==20231228   # fallback PDF extraction
-python-docx==1.1.2       # DOCX text extraction
-PyYAML==6.0.2            # read users.yaml
-scikit-learn==1.5.2      # cosine similarity (optional nicety)
+PyMuPDF==1.24.9
+pdfminer.six==20231228
+python-docx==1.1.2
+PyYAML==6.0.2
+scikit-learn==1.5.2
+sentence-transformers==2.6.1
+torch
+spacy==3.7.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
