--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-docx==1.1.2
 PyYAML==6.0.2
 scikit-learn==1.5.2
 sentence-transformers==2.6.1
-torch
+torch==2.0.1
 spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
